[tool.poetry]
name = "poetry add fastapi uvicorn beautifulsoup4 requests mlx-lm"
version = "0.1.0"
description = ""
authors = ["Orofido <orofidoly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
